--- a/lab3e1.html
+++ b/lab3e1.html
@@ -4,21 +4,16 @@
 		<!--The head contains all of the confirguration items for our page-->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>This is lab 3 exercise 2</title>
-		<link href="lab3e2.css" type="text/css" rel="stylesheet" />
+		<title>This is some awesome text</title>
+		<link href="lab.css" type="text/css" rel="stylesheet" />
 	</head>
-
 
 	<body>
 		<!--The body contains all of the content for our page-->
 
-		<ul id="menu"> <!--this is an unordered lists with 3 items-->
-			<li class="greenTEXT">Example 1 </li>
-			<li class="greenTEXT">Example 2 </li>
-			<li class="greenTEXT">Example 3 </li>
-		</ul>
+		<div>
+			<p>This is some awesome text</p>
+		</div>
 
 
-
-	</body>
-</html>
+</body></html>
